cluster/apps/nextcloud-prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-prod
  labels:
    app.kubernetes.io/name: nextcloud-prod
spec:
  selector:
    app.kubernetes.io/name: nextcloud-prod
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
